--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,26 +1,13 @@
 ---
-# ansible_distribution_release
-# CenOS 7     - Core
-# Ubuntu 14   - trusty
-# RedHat 6    - Santiago
-# RedHat 7    - Maipo
-
-- name: Check for supported operating system on target
+- name: check for supported operating system on target
   fail:
     msg: "The operating system of the target machine ({{ inventory_hostname }}) is not currently supported."
-  when: ansible_distribution_release not in ['trusty']
+  when: ( ansible_distribution == "Ubuntu" and ansible_distribution_major_version not in ['14', '16'] )
 
-#- name: include os specific variables
-#  include_vars: "{{ ansible_os_family }}.yml"
 
-- name: Include Debian specific tasks
-  include: Debian.yml
-  when: ansible_os_family == 'Debian'
+- name: include variables
+  include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
 
-#- name: Include RedHat specific tasks
-#  include: RedHat.yml
-#  when: ansible_os_family == 'RedHat'
-#
-#- name: Include Suse specific tasks
-#  include: Suse.yml
-#  when: ansible_os_family == 'Suse'
+
+- name: include Debian specific tasks
+  include: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
