--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,5 +9,5 @@
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
 
 
-- name: include Debian specific tasks
+- name: include distro specific tasks
   include: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
